--- a/styles/footer.css
+++ b/styles/footer.css
@@ -60,3 +60,44 @@ footer span {
     margin-bottom: 10px;
   }
 }
+
+
+@media (max-width: 600px) {
+  footer {
+    grid-template-columns: 1fr 1fr;
+
+    & .footer-main {
+      display: none;
+    }
+
+    & h4 {
+      font-size: 16px;
+    }
+
+    & img {
+      height: 20px;
+    }
+
+    & span {
+      font-size: 14px;
+    }
+  }
+}
+
+@media (max-width:400px) {
+  footer {
+    gap: 40px;
+
+    & h4 {
+      font-size: 16px;
+    }
+
+    & img {
+      height: 20px;
+    }
+
+    & span {
+      font-size: 14px;
+    }
+  }
+}
