--- a/styles/footer.css
+++ b/styles/footer.css
@@ -5,12 +5,13 @@ footer {
   width: 100%;
   padding-inline: 80px;
   background-color: #000000e7;
-  height: 240px;
+  font-family: "Inter", sans-serif;
+
 }
 
 footer h4 {
   color: white;
-  font-size: 24px;
+  font-size: 20px;
   margin-block: 32px;
 }
 
@@ -55,49 +56,80 @@ footer span {
   flex-direction: column;
   align-items: center;
   border-inline: 1px solid rgba(0, 0, 0, 0.747);
-
-  & span {
-    margin-bottom: 10px;
-  }
 }
 
 
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   footer {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: auto auto;
+    padding-block: 20px 30px;
+  }
 
-    & .footer-main {
-      display: none;
-    }
+  footer h4 {
+    font-size: 20px;
+    margin-block: 10px;
+  }
 
-    & h4 {
-      font-size: 16px;
-    }
+  .footer-main {
+    display: none;
+  }
 
+  .redes-sociais {
     & img {
       height: 20px;
     }
 
     & span {
-      font-size: 14px;
+      font-size: 18px;
+    }
+  }
+
+  .contato {
+    border-right: 1px solid black;
+
+    & img {
+      height: 18px;
+    }
+
+    & span {
+      font-size: 18px;
     }
   }
 }
 
-@media (max-width:400px) {
+@media (max-width: 450px) {
   footer {
-    gap: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
 
-    & h4 {
-      font-size: 16px;
+    .contato {
+      border-right: none;
+      border-bottom: 1px solid black;
+      padding-bottom: 30px;
+
+      & img {
+        height: 18px;
+      }
+
+      & span {
+        font-size: 16px;
+      }
     }
+  }
 
+  footer h4 {
+    font-size: 18px;
+  }
+
+  .redes-sociais {
     & img {
-      height: 20px;
+      height: 18px;
     }
 
     & span {
-      font-size: 14px;
+      font-size: 16px;
     }
   }
 }
